--- a/style.css
+++ b/style.css
@@ -1,3 +1,47 @@
-/* body {
-    background-color: red;
-} */
+body {
+    background-color: #E5E5E5;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    min-height: 777px;
+    max-height: 888px;
+}
+
+.wrapper {
+    background-color: grey;
+    height: 763px;
+    width: 661px;
+    display: flex;
+    justify-content: center;
+}
+
+.app {
+    margin-top: 62px;
+    margin-bottom: 62px;
+}
+
+.app__search {
+    margin-bottom: 265px;
+    width: 500px;
+    height: 61px;
+    color: black;
+    font-size: 38px;
+    font-weight: 400;
+}
+
+.app__search::placeholder {
+    
+    color: black;
+    font-size: 38px;
+    font-weight: 400;
+}
+
+.app__result {
+    color: black;
+    font-weight: 400;
+    font-size: 24px;
+    height: 101px;
+    border: solid 1px;
+    border-color: black;
+    background-color: #E27BEB;
+}
