--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* ul,
+ol {
+  list-style: none;
+  margin: 10px 0px 0px 10px;
+  padding: 0px;
+} */
+
+
 body {
     background-color: #E5E5E5;
     align-items: center;
@@ -59,4 +67,5 @@ body {
     border: solid 1px;
     border-color: black;
     background-color: #E27BEB;
+    
 }
