--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-/* ul,
+ul,
 ol {
   list-style: none;
-  margin: 10px 0px 0px 10px;
+  margin: 0px;
   padding: 0px;
-} */
+}
 
 
 body {
@@ -40,22 +40,22 @@ body {
     color: black;
 }
 
-.app__search {
-    width: 506px;
+.app__search > li{
+    /* width: 506px; */
     font-weight: 400;
     font-size: 30px;
     height: 44px;
     border: solid 1px;
     background-color: #E3E3E3;
     color: black;
-     
+    padding-left: 10px;
 }
 
-.app__search:hover {
+.app__search > li:hover {
     background-color: #65CDF9;
 }
 
-.app__search:active {
+.app__search > li:active {
     background-color: #65CDF9;
 }
 
