--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 }
 
 .app__input {
+    display: flex;
     width: 500px;
     height: 61px;
     color: black;
@@ -41,7 +42,6 @@ body {
 }
 
 .app__search > li{
-    /* width: 506px; */
     font-weight: 400;
     font-size: 30px;
     height: 44px;
@@ -65,6 +65,8 @@ body {
 }
 
 .app__result {
+    display: flex;
+    align-items: center;
     color: black;
     font-weight: 400;
     font-size: 24px;
@@ -73,4 +75,8 @@ body {
     border-color: black;
     background-color: #E27BEB;
     
+}
+
+.app__result > li {
+    padding-left: 10px;
 }
