--- a/style.css
+++ b/style.css
@@ -71,10 +71,14 @@ body {
     font-weight: 400;
     font-size: 24px;
     height: 101px;
+    width: 100%;
     border: solid 1px;
     border-color: black;
     background-color: #E27BEB;
-    
+    background-image: url('/img/close.png');
+    background-repeat:no-repeat;
+    background-size: 50px;
+    background-position: 95%;
 }
 
 .app__result > li {
