--- a/style.css
+++ b/style.css
@@ -21,11 +21,14 @@ body {
     width: 661px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .app {
     margin-top: 62px;
-    margin-bottom: 62px;
+    margin-bottom: 0px;
+    height: 281px;
+    
 }
 
 .app__input {
@@ -66,6 +69,7 @@ body {
 
 .app__result {
     display: flex;
+    position: relative;
     align-items: center;
     color: black;
     font-weight: 400;
@@ -75,12 +79,22 @@ body {
     border: solid 1px;
     border-color: black;
     background-color: #E27BEB;
-    background-image: url('/img/close.png');
-    background-repeat:no-repeat;
-    background-size: 50px;
-    background-position: 95%;
 }
 
 .app__result > li {
     padding-left: 10px;
+}
+
+.app__result-img {
+    position: absolute;
+    height: 50px;
+    right: 5%;
+    top: 25%;
+}
+
+.result {
+    min-height: 103px;
+    /* display: flex; */
+    width: 503px;
+    /* flex-wrap: wrap; */
 }
